--- a/index.html
+++ b/index.html
@@ -35,27 +35,6 @@
         <li>HSC : GSEB</li>
     </ul>
     <hr>
-    <table cellspacing = "10">
-        <thead>
-            <tr>
-                <th>Date</th>
-                <th>Work</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>2025-2027</td>
-                <td>Junior Developer TCS</td>
-            </tr>
-            <tr>
-                <td>2027</td>
-                <td>Senior Developer TCS</td>
-            </tr>
-        </tbody>
-        <tfoot>
-
-        </tfoot>
-    </table>
 
     <hr>
 
@@ -65,11 +44,11 @@
             <td>
                 <table>
                     <tr>
-                        <td>Web Development</td>
+                        <td>Python Programmind</td>
                         <td>★★★★★</td>
                     </tr>
                     <tr>
-                        <td>App Development</td>
+                        <td>Web Development</td>
                         <td>★★★★</td>
                     </tr>
                 </table>
