--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <td>
                 <table>
                     <tr>
-                        <td>Python Programmind</td>
+                        <td>Python Programming</td>
                         <td>★★★★★</td>
                     </tr>
                     <tr>
